# ndigo5g_babel

./: .gitignore  README.md
.github/workflows/: build_all.yml  c-cpp.yml
include/: Ndigo250M_interface.h  NdigoAverager_interface.h  Ndigo_common_interface.h  Ndigo_interface.h  Ndigo_internal_interface.h  crono_interface.h  ndigo_noise_suppression_interface.h  tdcmanager.h
lib/: ndigo_driver_64.lib
lib/x64/: ndigo_driver_64.lib
ug_example/: README.md
ug_example/src/: ndigo_user_guide_example.cpp
ug_example/tools/: CMakeLists.txt  CMakeSettings.json
ug_example_250M/: README.md
ug_example_250M/src/: ndigo_user_guide_example_250M.cpp
ug_example_250M/tools/: CMakeLists.txt
